# v-upscale

./: CONTRIBUTING.md  LICENSE  README.md  build-with-vulkan.sh  bundle-libraries.sh  package-lock.json  package.json  pnpm-lock.yaml  run-with-vulkan.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  build.yml  pages.yml  release.yml  test.yml
docs/: README.md  index.html  package-lock.json  package.json  script.js  style.css  vite.config.js
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/moltenvk/: libvulkan.dylib
src-tauri/shaders/: upscale.comp  upscale.spv
src-tauri/src/: lib.rs  main.rs  vulkan.rs
